src/test/ui-fulldeps/hash-stable-is-unstable.stderr
error[E0601]: `main` function not found in crate `hash_stable_is_unstable`
   |
   = note: consider adding a `main` function to `$DIR/hash-stable-is-unstable.rs`

error[E0658]: use of unstable library feature 'rustc_private': this crate is being loaded from the sysroot, an unstable location; did you mean to load this crate from crates.io via `Cargo.toml` instead?
  --> $DIR/hash-stable-is-unstable.rs:3:1
   |
LL | extern crate rustc_data_structures;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/27812
   = help: add #![feature(rustc_private)] to the crate attributes to enable

error[E0658]: use of unstable library feature 'rustc_private': this crate is being loaded from the sysroot, an unstable location; did you mean to load this crate from crates.io via `Cargo.toml` instead?
  --> $DIR/hash-stable-is-unstable.rs:5:1
   |
LL | extern crate rustc;
   | ^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/27812
   = help: add #![feature(rustc_private)] to the crate attributes to enable

error[E0658]: use of unstable library feature 'rustc_private': this crate is being loaded from the sysroot, an unstable location; did you mean to load this crate from crates.io via `Cargo.toml` instead?
  --> $DIR/hash-stable-is-unstable.rs:7:1
   |
LL | extern crate rustc_macros;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/27812
   = help: add #![feature(rustc_private)] to the crate attributes to enable

error[E0658]: use of unstable library feature 'rustc_private': this crate is being loaded from the sysroot, an unstable location; did you mean to load this crate from crates.io via `Cargo.toml` instead?
  --> $DIR/hash-stable-is-unstable.rs:10:5
   |
LL | use rustc_macros::HashStable;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/27812
   = help: add #![feature(rustc_private)] to the crate attributes to enable

error[E0658]: use of unstable library feature 'rustc_private': this crate is being loaded from the sysroot, an unstable location; did you mean to load this crate from crates.io via `Cargo.toml` instead?
  --> $DIR/hash-stable-is-unstable.rs:13:10
   |
LL | #[derive(HashStable)]
   |          ^^^^^^^^^^
   |
   = note: for more information, see https://github.com/rust-lang/rust/issues/27812
   = help: add #![feature(rustc_private)] to the crate attributes to enable

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0601, E0658.
For more information about an error, try `rustc --explain E0601`.
